--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,20 @@
- name: Sync Leetcode
+name: LeetCode Sync
 
- on:
-   workflow_dispatch:
-   schedule:
-     - cron: "0 8 * * 6"
+on:
+  schedule:
+    - cron: '0 8 * * 6'
+  workflow_dispatch:
 
- jobs:
-   build:
-     runs-on: ubuntu-latest
+permissions:
+  contents: write  # This is crucial for pushing changes
 
-     steps:
-       - name: Sync
-         uses: joshcai/leetcode-sync@v1.7
-         with:
-           github-token: ${{ github.token }}
-           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
-           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
-           destination-folder: solutions
-           verbose: true
-           commit-header: "[LeetCode Sync]"
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sync
+        uses: joshcai/leetcode-sync@v1.7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
+          leetcode-session: ${{ secrets.LEETCODE_SESSION }}
