--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: LeetCode Sync
 
 on:
   schedule:
-    - cron: '0 8 * * 6'
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 permissions:
@@ -15,6 +15,6 @@ jobs:
       - name: Sync
         uses: joshcai/leetcode-sync@v1.7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT_TOKEN }}
           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
