--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,74 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Sync
+      - name: Debug - Test PAT Token
+        run: |
+          echo "🔍 Debugging PAT_TOKEN permissions..."
+          
+          # Test basic authentication
+          echo "Testing basic authentication..."
+          auth_response=$(curl -s -w "%{http_code}" -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+                         https://api.github.com/user)
+          auth_code=${auth_response: -3}
+          echo "Auth Status: $auth_code"
+          
+          if [ "$auth_code" != "200" ]; then
+            echo "❌ PAT_TOKEN authentication failed"
+            echo "Response: ${auth_response%???}"
+            exit 1
+          fi
+          
+          # Test repository access
+          echo "Testing repository access..."
+          repo_response=$(curl -s -w "%{http_code}" -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+                         https://api.github.com/repos/${{ github.repository }})
+          repo_code=${repo_response: -3}
+          echo "Repo Access Status: $repo_code"
+          
+          if [ "$repo_code" != "200" ]; then
+            echo "❌ PAT_TOKEN cannot access repository"
+            echo "Response: ${repo_response%???}"
+            exit 1
+          fi
+          
+          # Check token scopes
+          echo "Checking token scopes..."
+          curl -s -I -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+               https://api.github.com/user | grep -i "x-oauth-scopes"
+          
+          echo "✅ PAT_TOKEN appears to be working correctly"
+
+      - name: Debug - Test Repository Write Access
+        run: |
+          echo "🔍 Testing write permissions..."
+          
+          # Test if we can read repository contents
+          contents_response=$(curl -s -w "%{http_code}" -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+                             https://api.github.com/repos/${{ github.repository }}/contents)
+          contents_code=${contents_response: -3}
+          echo "Contents Access Status: $contents_code"
+          
+          if [ "$contents_code" != "200" ]; then
+            echo "❌ Cannot read repository contents"
+            echo "Response: ${contents_response%???}"
+          else
+            echo "✅ Can read repository contents"
+          fi
+
+      - name: Sync LeetCode Solutions
         uses: joshcai/leetcode-sync@v1.7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}  # Try built-in token first
+          github-token: ${{ secrets.PAT_TOKEN }}
           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
+
+      - name: Debug - Post-Sync Status
+        if: failure()
+        run: |
+          echo "🔍 LeetCode sync failed, checking final status..."
+          echo "Repository: ${{ github.repository }}"
+          echo "Workflow run: ${{ github.run_id }}"
+          echo "If auth tests passed but sync failed, the issue might be:"
+          echo "1. LeetCode credentials (CSRF token or session)"
+          echo "2. Specific API endpoints the action tries to access"
+          echo "3. Rate limiting"
